# OS-229RPDGenerator

./: ASHRAE 229_maps_from_meeting_11.20.xlsx  Appendix_E_Appendix_F_Issues_Log.xlsx  Gemfile  LICENSE  OpenStudio RPD Generation steps.docx  README.md  RECI_Compliance Parameter Requirements.xlsx  Rakefile  TODO change compliance parameter.txt  add_schedules_to_osm.rb  comp_param_empty.csv  createOSRulesetProjectDescription.py  create_cp_csv.osw  create_rmd.osw  pyproject.toml  requirements.txt
229_compliance_osms/: Test_E1.osm  seed.osm
CompParamJson/: generate_csv.rb
create_cp_csv/: measure.rb  measure.xml  produce_csv_data_from_comp_param_json.rb
create_preconditioned_idf/: README.md  measure.rb  measure.xml
create_preconditioned_idf_energyplus/: README.md  README.md.erb  measure.rb  measure.xml
openstudio229/: createOSRulesetProjectDescription.py
prepare_osm_idf_translation/: README.md.erb
read_cp_csv/: README.md  README.md.erb  measure.rb  measure.xml  set_building_segments.rb  set_comp_param_json_from_csv_data.rb
test_files/: ASHRAE901_OfficeSmall_STD2019_Denver.idf  ASHRAE901_OfficeSmall_STD2019_Denver.osm  Test_E1.osm
test_idfs_osms/: OfficeMedium-1floor-13ft-ceiling-noplenum_with_schedules2_and_constructions_with_ground2purged_geo_check_windows.osm
tests/: Appendix_E_Appendix_F_Issues_Log.xlsx  Test_E1-filled.csv  Test_E1.idf  Test_E1.osm  Test_E1_filled.csv  Test_E2-filled.csv  Test_E2.idf  Test_E2.osm  Test_E3-filled.csv  Test_E3.idf  Test_E3.osm  Test_F100-filled.csv  Test_F100.idf  Test_F100_autosized.osm  Test_F110-filled.csv  (+55 more)
(+74 files in other folders)
